// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user actions createLanguageCode 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "CREATE_LANGUAGE_CODE",
  },
]
`;

exports[`user actions deprecateLanguageCode 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "DEPRECATE_LANGUAGE_CODE",
  },
]
`;

exports[`user actions getCodes 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "GET_LANGUAGE_CODES",
  },
]
`;

exports[`user actions getLanguageCodyId 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "GET_LANGUAGE_CODE_BY_ID",
  },
]
`;

exports[`user actions undeprecateLanguageCode 1`] = `
Array [
  Object {
    "payload": Promise {},
    "type": "UNDEPRECATE_LANGUAGE_CODE",
  },
]
`;
